feat: [CDS-44216]: Add allowed values support for Connector field (#11786)
* add multi prop

* feat: [CDS-44216]: Update connector/reference components to support multiselect, fix bugs

* fix: [CDS-44216]: fix stale references issue

* feat: [CDS-44216]: list allowed connectors based on the template

* fix: [CDS-44216]: Abort stale requests

* chore: update snapshots

* fix: conditionally pass filters

* feat: use ConnectorConfigureOptions if enableConfigureOptions is true

* chore: add tests for ConnectorConfigureOptions

* fix: make signal optional

* fix: rename render prop

* chore: use curly braces

--- a/src/modules/35-connectors/strings/strings.en.yaml
+++ b/src/modules/35-connectors/strings/strings.en.yaml
@@ -57,6 +57,7 @@ loginToMasterAccount: and login to your master account
 roleARN: Create Cross Account Role
 ifReq: if required.
 selectConnector: Select Connector
+selectConnectors: Select Connectors
 showInstructions: Show instructions
 apiKey: '{{$.common.apikey}}'
 apiKeyOrPassword: Password/Api Key
