--- a/catalog-info-ngui.yml
+++ b/catalog-info-ngui.yml
@@ -6,6 +6,10 @@ metadata:
     github.com/project-slug: 'sandeepa-kv-jois/harness-core-ui'
     circleci.com/project-slug: github/ruby2001/sample-javascript-cfd 
     backstage.io/techdocs-ref: url:https://github.com/sandeepa-kv-jois/harness-core-ui
+    harnessci/project-slug: github/sandeepa-kv-jois/harness-core
+    accountIdentifier: vpCkHKsDSxK9_KYfjCTMKA
+    orgIdentifier: default
+    projectIdentifier: UICore
   name: ng-ui
 spec:
   lifecycle: production
