feat: [FFM-4430]: add Setup GitSync redirect button to Flag & Target management pages (#11816)
* feat: [FFM-4430]: indicate GitSync not set up
- component added for 'Setup Git Sync' button
- button redirects to 'Git Management'
- icon component ServicesGithubIcon added due to color overwrite when icon used in Button component

* feat: [FFM-430]: Setup Git Sync button added to all required places
- update GitSyncActions compondent to check isGitSyncEnabled to then render action buttons or setup button (reduces repetition & importing Setup button multiple times)
- consolodate the three test files for FeatureFlagsPage into one file, separate RenderColumnFlag test into own file
- still to do: update tests to check for setup button, small css changes after showing Ksenia

* feat: [FFM-4430]: GitSyncActions tests
- fix broken tests after change
- add test for Setup Git Sync button when git sync not yet enabled on project

* feat: [FFM-4430]: fix unit tests

* feat: [FFM-4430]: GitSyncRedirect button
- test coverage
- fix placement and spacing

* feat: [FFM-4430]: update snapshots

* feat: [FFM-4430]: fix string on Set Up Git Sync button

--- a/src/modules/75-cf/strings/strings.en.yaml
+++ b/src/modules/75-cf/strings/strings.en.yaml
@@ -155,6 +155,7 @@ featureFlags:
   changeOrReset: Change your filter criteria or reset
   resetFilters: Reset Filters
   clearSearch: Clear Search
+  setupGitSync: Set Up Git Sync
   rules:
     whenFlagEnabled: When the Flag is Enabled
     whenFlagDisabled: When the Flag is Disabled
