--- a/cypress/fixtures/pipeline/api/freeze/getProjectLevelFreeze.json
+++ b/cypress/fixtures/pipeline/api/freeze/getProjectLevelFreeze.json
@@ -1,12 +1,12 @@
 {
   "status": "SUCCESS",
   "data": {
-    "accountId": "px7xd_BFRCi-pfWPYXVjvw",
+    "accountId": "accountId",
     "type": "MANUAL",
     "status": "Enabled",
     "name": "project level freeze",
     "tags": {},
-    "orgIdentifier": "Archit",
+    "orgIdentifier": "orgId",
     "projectIdentifier": "ishant",
     "identifier": "project_level_freeze",
     "yaml": "freeze:\n  name: project level freeze\n  identifier: project_level_freeze\n  entityConfigs:\n    - name: Rule Number 1\n      entities:\n        - type: Service\n          filterType: Equals\n          entityRefs:\n            - testService\n        - type: EnvType\n          filterType: Equals\n          entityRefs:\n            - PROD\n    - name: Rule Number 2\n      entities:\n        - type: Service\n          filterType: All\n        - type: EnvType\n          filterType: All\n  status: Enabled\n",
