feat: [PIE-5477]: CRUD env group in pipeline studio + pseudo field fix  (#11890)
* fix: pseudo field in pipeline yaml when using multi svc/env template

* fix: environments radio group retention on switch

* select environments when single to multi

* environment groups toggle fixes

* feat: environment groups create, delete

* feat: environment groups edit

* chore: layout change in environments tab

* fix: align items to start

* chore: add comment

* chore: update comment

* fix: retention in env group

--- a/src/modules/75-cd/strings/strings.en.yaml
+++ b/src/modules/75-cd/strings/strings.en.yaml
@@ -202,12 +202,14 @@ pipelineSteps:
     multiEnvironmentsConfirmationText: Are you sure you want to switch to deploying multiple environments or infrastructures?. If you choose to proceed, your existing environment will be migrated automatically.
     singleEnvironmentDialogTitleText: Deploy to single environment?
     singleEnvironmentConfirmationText: Are you sure you want to switch to deploying to a single environment?. If you choose to proceed, your existing environments will be lost.
-    deleteEnvironmentFromListDialogTitleText: Remove environment from list?
-    deleteEnvironmentFromListConfirmationText: Are you sure you want to remove {{name}} environment from the list?
-    deleteInfrastructureFromListDialogTitleText: Remove infrastructure from list?
-    deleteInfrastructureFromListConfirmationText: Are you sure you want to remove {{name}} infrastructure from the list?
-    deleteClusterFromListDialogTitleText: Remove cluster from list?
-    deleteClusterFromListConfirmationText: Are you sure you want to remove {{name}} cluster from the list?
+    deleteEnvironmentFromListDialogTitleText: Remove Environment from list?
+    deleteEnvironmentFromListConfirmationText: Are you sure you want to remove Environment - {{name}} from the list?
+    deleteInfrastructureFromListDialogTitleText: Remove Infrastructure from list?
+    deleteInfrastructureFromListConfirmationText: Are you sure you want to remove Infrastructure - {{name}} from the list?
+    deleteClusterFromListDialogTitleText: Remove Cluster from list?
+    deleteClusterFromListConfirmationText: Are you sure you want to remove Cluster - {{name}} from the list?
+    deleteEnvironmentGroupFromListDialogTitleText: Remove Environment Group from list?
+    deleteEnvironmentGroupFromListConfirmationText: Are you sure you want to remove Environment Group - {{name}} from the list?
   serviceTab:
     stageOverrides: Stage Overrides
     overrideChanges: Override artifacts, manifests, service variables for this stage
