fix: [CCM-9217]: Don't Send BILLING if it's Coming From Previously Created Connectors (#11596)
* fix: [CCM-9217]: Don't Send `BILLING` if it's Coming From Previously Created Connectors

* fix: [CCM-9217]: Don't Send `BILLING` if it's Coming From Previously Created Connectors

* fix: [CCM-9217]: Minor Fixes

* fix: [CCM-9217]: Minor Fixes

* fix: [CCM-9217]: Fix ESLint

* fix: [CCM-9217]: Address Review Comment

--- a/src/modules/35-connectors/strings/strings.en.yaml
+++ b/src/modules/35-connectors/strings/strings.en.yaml
@@ -761,7 +761,7 @@ ceAzure:
     subscriptionId: '{{ $.common.subscriptionId }}'
     tenantId: '{{ $.connectors.tenantId }}'
     hints:
-      nextStepHint1: 'If the Azure tenant ID you entered is covered by any of the above, select and click “Continue >” to proceed.'
+      nextStepHint1: 'If the billing export for the Subscription Id {{ subscriptionId }} is covered by any of the above existing exports, click "Continue >" to proceed.'
       nextStepHint2: '{{ $.connectors.ceAws.curExising.nextStepHint2 }}'
     searchBillingReports: Enter billing report name
   chooseRequirements:
@@ -771,6 +771,7 @@ ceAzure:
     info: Cost visibility of the resources for which you added the Billing Export in the previous step is enabled by default. Select the others as per your requirements.
     visibilityCardDesc: Cost insights, anomaly detection, service insights, creating budgets perspectives and alerts, utilised/wasted resources in clusters.
     optimizationCardDesc: Detection of orphaned resources, recommendations to save costs, scaling/tearing down, turning off in non-work hours, reserving instances.
+    atleastOneError: Please select at least one feature other than Visibility
     billing:
       feat1: Azure costs by services, accounts, etc.
       feat2: Cost perspective by various constructs
