fix: [PL-28915]: Added provision for renewal Interval to be zero in HashiCorp vault (#11824)
* fix: [PL-28915]: Added provision to give renewalInterval as 0

* fix: [PL-28915]: Fixed a test

* fix: [PL-28915]: added warning message

* fix: [PL-28915]: Modified the color or warning message

* fix: [PL-28915]: Made the warning message as variable from string file

* fix: [PL-28915]: made the formik of renewal interval to number type

* fix: [PL-28915]: Modified the color of warning

* fix: [PL-28915]: updated snapshots

--- a/src/modules/35-connectors/strings/strings.en.yaml
+++ b/src/modules/35-connectors/strings/strings.en.yaml
@@ -233,6 +233,7 @@ hashiCorpVault:
   engineName: 'Secret Engine Name'
   engineVersion: 'Secret Engine Version'
   renewal: 'Renewal Interval (minutes)'
+  renewalIntervalWarningMessage: Harness will not renew the token if Renewal Interval is set to zero
   readOnly: '{{$.common.readOnly}}'
   readOnlyVault: 'Read-only Vault'
   default: '{{$.common.default}}'
